tests/base/parser/bad/cmodule-transition-id-lparen-with.scilla
scilla_version 0

contract Test
()

(* field is a key word *)
transition something ( field : Bool) end
